Companion styles 2012 updates Messaging auto complete. Commit corrects/removes bullets on li elements for auto complete names & input, removes li element margins. In addition add styling to: * Improve padding for selected names, reduce background, improve span element spacing, add cursor on hover, add close 'x' hover color. * ac_results auto complete suggestions, add light background to highlight names & prevent page elements behind bleeding through, improve padding/margins
This set of rulesets needs checking across the other companion styles and might be better placed in the main BP stylesheet.

See #6766 Props r-a-y

git-svn-id: https://buddypress.svn.wordpress.org/trunk@10507 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/src/bp-templates/bp-legacy/css/twentytwelve-rtl.css
+++ b/src/bp-templates/bp-legacy/css/twentytwelve-rtl.css
@@ -1392,11 +1392,6 @@ http://codex.buddypress.org/themes/buddypress-companion-stylesheets/
 	* @subsection 6.2.2.5 - Private Messaging
 	*-------------------------------------------
 	*/
-.bp-user #buddypress {
-	/* Compose message form */
-	/* Sitewide Notices loop */
-}
-
 .bp-user #buddypress #message-thread a {
 	border-bottom: 0;
 }
@@ -1583,6 +1578,42 @@ http://codex.buddypress.org/themes/buddypress-companion-stylesheets/
 	box-sizing: border-box;
 }
 
+.bp-user #buddypress .acfb-holder {
+	list-style: none;
+}
+
+.bp-user #buddypress .acfb-holder li {
+	margin-right: 0;
+}
+
+.bp-user #buddypress .acfb-holder li.friend-tab {
+	background: #edf7fa;
+	border: inherit;
+	margin-left: 0;
+	padding: 0.5em;
+}
+
+.bp-user #buddypress .acfb-holder li.friend-tab span.p {
+	padding-right: 10px;
+}
+
+.bp-user #buddypress .acfb-holder li.friend-tab span.p:focus, .bp-user #buddypress .acfb-holder li.friend-tab span.p:hover {
+	color: #c82b2b;
+	cursor: pointer;
+}
+
+.bp-user #buddypress .acfb-holder li.friend-tab a {
+	border-bottom: 0;
+	text-decoration: none;
+}
+
+.bp-user #buddypress .acfb-holder li.friend-tab a img {
+	display: inline;
+	height: 20px;
+	vertical-align: middle;
+	width: 20px !important;
+}
+
 .bp-user #buddypress #message-threads.sitewide-notices tr {
 	margin: 3em 0;
 }
@@ -1642,6 +1673,23 @@ http://codex.buddypress.org/themes/buddypress-companion-stylesheets/
 	display: block;
 	line-height: initial;
 	text-indent: 0;
+}
+
+.bp-user .ac_results {
+	background: #eee;
+	padding-right: 10px;
+}
+
+.bp-user .ac_results li {
+	margin: 10px 0;
+}
+
+.bp-user .ac_results li:focus, .bp-user .ac_results li:hover {
+	cursor: pointer;
+}
+
+.bp-user .ac_results li img {
+	vertical-align: bottom;
 }
 
 /**
@@ -1937,7 +1985,3 @@ http://codex.buddypress.org/themes/buddypress-companion-stylesheets/
 * @section 10.0 - Ajax Loading, Widgets, General classes
 *-------------------------------------------------------------------------------
 */
-#buddypress .acfb-holder li.friend-tab {
-	background: #9fd1e2;
-	border: inherit;
-}
